


=== Version 0.4 ===
(dev)

; Additions

* Added EntityIdParser
* Added ReferencedEntitiesFinder
* Added Unserializer interface
* Added SerializerFactory

; Changes

* ClaimObject class and Claim interface changed to Claim class
* StatementObject class and Statement interface changed to Statement class
* Moved all Serializer code into Wikibase\Lib\Serializers

; Requirements

* If experimental features are enabled, then this will depends on "Ask" extension now. See Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Ask


=== Version 0.3 ===
(???)

* Introduced EntityId interface
* Implemented proper serialization in Entity
* Improved Change classes
* Added countLinks and getLinks in SiteLinkLookup
* Removed Statements, StatementList, StatementListAccess and StatementsAggregate and replace usages by corresponding Claim classes
* Claims can now be looked up by GUID in any ClaimListAccess
* HashArray now supports driving classes that accept duplicates
* Hashable, Copyable, Immutable and Comparable have been removed in favour of the same interfaces in DataValues
* Moved the ApiSerializers of Wikibase Repo into WikibaseLib and removed API specific logic and naming
* Added reference hash based methods to References
* Added unserialization support to SnakSerializer


=== Version 0.2 ===
(???)

* Statements are now claims, instead of objects containing a claim
* Implemented PropertyObject and QueryObject
* Added ByPropertyIdArray
* Added TemplateStore
* Added Term interface


=== Version 0.1 ===
(2012-11-01)

Initial release with these features:

* Objects to represent entities and items
* Objects to represent SiteLinks
* Change propagation system using a shared table
** Objects to represent changes
** ChangeNotifier and ChangeHandler interfaces
** Maintenance script pollForChanges to detect new changes
* Store interfaces for SiteLink lookups and SiteLink caching
* Maintenance scripts to rebuild or delete all data