@@ -137,9 +137,9 @@
 					// can't check whether current valueview is most suitable for empty value if no
 					// indication for what kind of value (specified by the data type) is available
 					&& ( dataType || newValue !== null )
-					&& this._valueView.isMostSuitableFor( dataType || newValue )
 				) {
 					// display current Snak's data value in existing valueview:
+					this._valueView.option( 'on', dataType );
 					this._valueView.value( newValue );
 				} else {
 					// remove old view, create a new one or display message if unsupported data type
@@ -206,37 +206,13 @@
 				return false; // no valueview created!
 			}
 
-			// check if there is a suitable valueview:
-			if( !$.valueview.canChooseView( valueviewCriteria ) ) {
-				// display message instead if there is no input method for data values of that type:
-				var unsupportedMsg;
-
-				if( dataType ) {
-					// no view for that values of that data type or the data type's data value type
-					unsupportedMsg = mw.msg(
-						'wikibase-snakview-variation-unsupporteddatatype', dataType.getLabel() );
-					// NOTE: this also implies that the data value type is unsupported but the
-					//  message is more specific than that.
-				} else {
-					// no view for the value's value type
-					unsupportedMsg = mw.msg(
-						'wikibase-snakview-variation-unsupporteddatavalue', dataValue.getType() );
-				}
-
-				$valueViewDom
-				.text( unsupportedMsg )
-				.addClass( this.variationBaseClass + '-unsupporteddatavalue' );
-
-				return false; // no valueview created!
-			}
-
 			// TODO: Use something like an 'editview' and just change its data type rather than
 			//  initializing this over and over again and doing the checks.
-			$valueViewDom.valueview( { on: valueviewCriteria } );
+			$valueViewDom.valueview( {
+				on: valueviewCriteria,
+				value: dataValue
+			} );
 			this._valueView = $valueViewDom.data( 'valueview' );
-
-			// NOTE: if valueview values can be set initially some day, do it for performance
-			this._valueView.value( dataValue );
 
 			$valueViewDom
 			.on( 'valueviewparse.snakview-variations-value', function( event ) {
